# MQTT_Client

./: .gitignore  CMakeLists.txt  LICENSE  MQTT_Client.sln  README.md  ZPR.sln  clean.sh  cleanAll.sh  daf  makeAll.sh  makefile
.circleci/: config.yml
Application/: Application.cpp  Application.vcxproj  Application.vcxproj.filters  makefile
DataStore/: CMakeLists.txt  DataStore.cpp  DataStore.hpp
DataStore/doc/: Doxyfile
DataStore/include/: DataArchive.hpp  DataJSON.hpp  DataStore.hpp
DataStore/src/: DataArchive.cpp  DataJSON.cpp  DataStore.cpp  exampleJSON2.json
DataStore/test/: dataStore_test_1.cpp  dataStore_test_2.cpp  dataStore_test_3.cpp
Database/: databaseFolder.txt
MQTT_Client/: CMakeLists.txt  MQTT_Client.cpp  MQTT_Client.h  MQTT_Client.hpp  MQTT_Client.vcxproj  MQTT_Client.vcxproj.filters  makefile  test.cpp
MQTT_Client/MQTT_Package/: MQTT_Client.cpp  MQTT_Client.hpp
MQTT_Client/Test/: CMakeLists.txt  test.cpp
MQTT_Client/Test/src/: Test1.cpp
MQTT_Client/doc/: Doxyfile
MQTT_Client/include/: Connection.h  ConnectionUnencrypted.h  MQTTCallback.hpp  MQTTData.hpp  MQTT_Client.hpp  SocketHandle.hpp
MQTT_Client/src/: Connection.cpp  ConnectionUnencrypted.cpp  MQTTCallback.cpp  MQTT_Client.cpp  SocketHandle.cpp
MQTT_Client/test/: setConnectionType_unencrypted.cpp  setConnectionType_unencryptedBis.cpp
Publisher/: CMakeLists.txt  Publisher.cpp
Publisher/doc/: Doxyfile
Publisher/include/: MosquittoWrapper.hpp  Publisher.hpp
Publisher/src/: MosquittoWrapper.cpp  Publisher.cpp
Publisher/test/: publisher_test_1.cpp  publisher_test_2.cpp
Subscriber/: CMakeLists.txt  Subscriber.cpp
Subscriber/doc/: Doxyfile
Subscriber/include/: Subscriber.hpp  SubscriberData.hpp
Subscriber/src/: Subscriber.cpp  SubscriberData.cpp  new.json
Subscriber/test/: subscriber_test_1.cpp  subscriber_test_2.cpp
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters  makefile
paho.mqtt.c/: .cproject  .gitreview  .project  .travis.yml  CMakeLists.txt  LICENSE  PULL_REQUEST_TEMPLATE.md
paho.mqtt.c/doc/man/man1/: paho_c_pub.1  paho_c_sub.1  paho_cs_pub.1  paho_cs_sub.1
paho.mqtt.c/src/: CMakeLists.txt  Heap.c  LinkedList.c  Log.c  MQTTAsync.c  MQTTAsync.h  MQTTClient.c  MQTTClient.h  MQTTPacket.h  MQTTPacketOut.c  MQTTPersistence.c  MQTTProtocolClient.c  MQTTProtocolClient.h  Messages.c  SHA1.c  SHA1.h  SSLSocket.c  SSLSocket.h  Socket.c  Socket.h  StackTrace.c  StackTrace.h  Thread.c  Thread.h  Tree.c  WebSocket.c  WebSocket.h
paho.mqtt.c/src/samples/: MQTTAsync_publish.c
paho.mqtt.c/test/: test6.c  test_issue373.c
sprawozdanieKoncowe/: linijki.tex  podsumowanieKrytyka.tex  sprawozdanieKoncowe.tex
